try removing animation

--- a/packages/rettangoli-ui/vt/templates/default.html
+++ b/packages/rettangoli-ui/vt/templates/default.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/public/theme.css">
+     <script>
+      window.VT_TEST_MODE = true;
+    </script>
     <script src="/public/rtgl-icons.js"></script>
     <script src="/public/main.js"></script>
   </head>
