--- a/packages/rettangoli-ui/vt/static/public/theme.css
+++ b/packages/rettangoli-ui/vt/static/public/theme.css
@@ -64,6 +64,8 @@ body {
   height: 100%;
   margin: 0;
   font-family: Roboto, -apple-system, "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
   background-color: var(--background);
@@ -120,7 +122,7 @@ body {
   --lg-letter-spacing: normal;
 
   --md-font-size: 1rem;
-  --md-font-weight: normal;
+  --md-font-weight: 400;
   --md-line-height: 1.5rem;
   --md-letter-spacing: normal;
 
@@ -130,7 +132,7 @@ body {
   --sm-letter-spacing: normal;
 
   --xs-font-size: .75rem;
-  --xs-font-weight: normal;
+  --xs-font-weight: 400;
   --xs-line-height: 1;
   --xs-letter-spacing: normal;
 
