--- a/packages/rettangoli-ui/vt/specs/components/tooltip/placements.html
+++ b/packages/rettangoli-ui/vt/specs/components/tooltip/placements.html
@@ -1,5 +1,6 @@
 ---
 title: "Placements Open"
+skipScreenshot: true
 ---
 <rtgl-view h="100vh" w="100vw" ah="c" av="c">
   <rtgl-view dir="col" g="xl">
