remove flex=1 in favour of w=1fg and h=1fg

--- a/packages/rettangoli-ui/vt/specs/components/page-outline/basic/0001.html
+++ b/packages/rettangoli-ui/vt/specs/components/page-outline/basic/0001.html
@@ -2,7 +2,7 @@
 title: "Page Outline - Basic"
 ---
 <rtgl-view d="h" g="lg" h="100vh" w="f" fw="w">
-  <rtgl-view id="content" flex="1" g="xl" h="100vh" sv>
+  <rtgl-view id="content" w="1fg" g="xl" h="100vh" sv>
     <rtgl-view>
       <h1 id="section-1">Introduction</h1>
       <rtgl-text>This demonstrates the page outline component with nested heading levels.</rtgl-text>
