--- a/packages/rettangoli-ui/vt/specs/examples/components/navbar/minimal_brand.html
+++ b/packages/rettangoli-ui/vt/specs/examples/components/navbar/minimal_brand.html
@@ -2,4 +2,4 @@
 title: navbar-7
 ---
 
-<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><a href="/home"><rtgl-view d="h" av="c" g="lg" g="md"><rtgl-text s="lg">Brand</rtgl-text></rtgl-view></a><rtgl-view flex="1"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
+<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><a href="/home"><rtgl-view d="h" av="c" g="lg" g="md"><rtgl-text s="lg">Brand</rtgl-text></rtgl-view></a><rtgl-view w="1fg"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
