--- a/packages/rettangoli-ui/vt/specs/examples/components/navbar/with_logo_image.html
+++ b/packages/rettangoli-ui/vt/specs/examples/components/navbar/with_logo_image.html
@@ -2,4 +2,4 @@
 title: navbar-2
 ---
 
-<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><rtgl-view d="h" av="c" g="lg" g="md"><rtgl-text s="lg">Company Name</rtgl-text><rtgl-image w="32" h="32" src="/logo.png" alt="Company" Logo></rtgl-image></rtgl-view><rtgl-view flex="1"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
+<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><rtgl-view d="h" av="c" g="lg" g="md"><rtgl-text s="lg">Company Name</rtgl-text><rtgl-image w="32" h="32" src="/logo.png" alt="Company" Logo></rtgl-image></rtgl-view><rtgl-view w="1fg"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
