--- a/packages/rettangoli-ui/vt/specs/examples/components/navbar/with_path_navigation.html
+++ b/packages/rettangoli-ui/vt/specs/examples/components/navbar/with_path_navigation.html
@@ -2,4 +2,4 @@
 title: navbar-1
 ---
 
-<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><rtgl-view id="start" d="h" av="c" g="lg" g="md" cur="p"><rtgl-text s="lg">Dashboard</rtgl-text></rtgl-view><rtgl-view flex="1"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
+<rtgl-view bgc="bg" d="h" h="48" av="c" w="f"><rtgl-view id="start" d="h" av="c" g="lg" g="md" cur="p"><rtgl-text s="lg">Dashboard</rtgl-text></rtgl-view><rtgl-view w="1fg"></rtgl-view><rtgl-view d="h" av="c" g="lg"><slot name="right"></slot></rtgl-view></rtgl-view>
