--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-align-05.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-align-05.html
@@ -17,54 +17,54 @@ title: Align (mixed items)
   </rtgl-view>
 
   <rtgl-view d="h" g="lg">
-    <rtgl-view d="h" flex="1" bgc="mu" av="c" pr="md">
+    <rtgl-view d="h" w="1fg" bgc="mu" av="c" pr="md">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="ac" flex="1" av="c" pl="md">
-        <rtgl-text s="bm" c="">Title</rtgl-text>
+      <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
+        <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view stretch bgc="ac" av="c"
-        ><rtgl-text s="bm" c="">Price</rtgl-text>
+      <rtgl-view stretch bgc="ac" av="c">
+        <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100">
+    <rtgl-view d="h" w="1fg" bgc="mu" av="c" h="100">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="ac" flex="1" av="c" pl="md">
-        <rtgl-text s="bm" c="">Title</rtgl-text>
+      <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
+        <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view stretch bgc="ac" av="c"
-        ><rtgl-text s="bm" c="">Price</rtgl-text>
+      <rtgl-view stretch bgc="ac" av="c">
+        <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
 
-    <rtgl-view d="h" flex="1" bgc="mu" av="c" h="100" w="200">
+    <rtgl-view d="h" w="1fg" bgc="mu" av="c" h="100" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="ac" flex="1" av="c" pl="md">
-        <rtgl-text s="bm" c="">Title</rtgl-text>
+      <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
+        <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view h="f" bgc="ac" av="c"
-        ><rtgl-text s="bm" c="">Price</rtgl-text>
+      <rtgl-view h="f" bgc="ac" av="c">
+        <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
   </rtgl-view>
 
   <rtgl-view d="h" g="lg">
-    <rtgl-view flex="1" bgc="mu" av="c"  ah="c" w="200">
+    <rtgl-view w="1fg" bgc="mu" av="c"  ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="ac" flex="1" av="c" pl="md">
-        <rtgl-text s="bm" c="">Title</rtgl-text>
+      <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
+        <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view w="f" bgc="ac" ah="c"
-        ><rtgl-text s="bm" c="">Price</rtgl-text>
+      <rtgl-view w="f" bgc="ac" ah="c">
+        <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
-    <rtgl-view flex="1" bgc="mu" av="c" ah="c" w="200">
+    <rtgl-view w="1fg" bgc="mu" av="c" ah="c" w="200">
       <rtgl-image src="/public/sample1.jpg" h="64"></rtgl-image>
-      <rtgl-view bgc="ac" flex="1" av="c" pl="md">
-        <rtgl-text s="bm" c="">Title</rtgl-text>
+      <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
+        <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view stretch bgc="ac" ah="c"
-        ><rtgl-text s="bm" c="">Price</rtgl-text>
+      <rtgl-view bgc="ac" ah="c">
+        <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
   </rtgl-view>
