--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-margin-02.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-margin-02.html
@@ -1,6 +1,6 @@
 ---
 title: Margin Full Width
-description: "Fixes CSS issue of width: 100% + margin.  Use stretch/fill-available to fix: https://caniuse.com/mdn-css_properties_width_stretch"
+description: "Tests width with margin using w='f'"
 ---
 <rtgl-view d="h" g="lg" p="lg" wh="f" fw="w">
     <rtgl-view bgc="mu" wh="80">
