--- a/packages/rettangoli-ui/vt/specs/primitives/view/view-align-05.html
+++ b/packages/rettangoli-ui/vt/specs/primitives/view/view-align-05.html
@@ -7,12 +7,12 @@ title: Align (mixed items)
     <rtgl-view bgc="mu" wh="80" g="sm">
       <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
       <rtgl-view bgc="mu" h="20" w="f"></rtgl-view>
-      <rtgl-view bgc="mu" h="20" stretch></rtgl-view>
+      <rtgl-view bgc="mu" h="20"></rtgl-view>
     </rtgl-view>
     <rtgl-view bgc="mu" wh="80" g="sm" d="h">
       <rtgl-view bgc="mu" h="20" w="20"></rtgl-view>
       <rtgl-view bgc="mu" h="f" w="20"></rtgl-view>
-      <rtgl-view bgc="mu" stretch w="20"></rtgl-view>
+      <rtgl-view bgc="mu" w="20"></rtgl-view>
     </rtgl-view>
   </rtgl-view>
 
@@ -22,7 +22,7 @@ title: Align (mixed items)
       <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
         <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view stretch bgc="ac" av="c">
+      <rtgl-view bgc="ac" av="c">
         <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
@@ -32,7 +32,7 @@ title: Align (mixed items)
       <rtgl-view bgc="ac" w="1fg" av="c" pl="md">
         <rtgl-text s="bm">Title</rtgl-text>
       </rtgl-view>
-      <rtgl-view stretch bgc="ac" av="c">
+      <rtgl-view bgc="ac" av="c">
         <rtgl-text s="bm">Price</rtgl-text>
       </rtgl-view>
     </rtgl-view>
