--- a/packages/rettangoli-ui/vt/specs/components/dropdownMenu/basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/dropdownMenu/basic.html
@@ -17,7 +17,7 @@ title: "Basic"
     dropdownMenu.removeAttribute('y');
   });
 
-  dropdownMenu.addEventListener('click-item', (e) => {
+  dropdownMenu.addEventListener('item-click', (e) => {
     console.log(e.detail);
   });
 
