--- a/packages/rettangoli-ui/vt/specs/components/form/basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/basic.html
@@ -16,13 +16,13 @@ title: "Basic"
     description: 'Form Description',
     fields: [{
       name: 'email',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Email',
       description: 'Enter your email',
       required: true,
     }, {
       name: 'password',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Password',
       description: 'Enter your password',
       required: true,
