--- a/packages/rettangoli-ui/vt/specs/components/form/context.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/context.html
@@ -31,7 +31,7 @@ title: "Context"
     }, {
       '$if contentType == "custom"': {
         name: 'content',
-        inputType: 'inputText',
+        inputType: 'input-text',
         label: 'Text Content',
         required: true,
       }
