--- a/packages/rettangoli-ui/vt/specs/components/form/empty-title-desc.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/empty-title-desc.html
@@ -14,7 +14,7 @@ title: "Empty title and description"
   form.form = {
     fields: [{
       name: 'email',
-      inputType: 'inputText',
+      inputType: 'input-text',
       required: true,
     }],
     actions: {
