--- a/packages/rettangoli-ui/vt/specs/components/form/form-with-add-option.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/form-with-add-option.html
@@ -17,7 +17,7 @@ title: Form with Select Add Option
         name: 'productName',
         label: 'Product Name',
         description: 'Enter the product name',
-        inputType: 'inputText',
+        inputType: 'input-text',
         placeholder: 'e.g., Widget Pro',
       },
       {
