--- a/packages/rettangoli-ui/vt/specs/components/form/with-color-picker.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/with-color-picker.html
@@ -16,12 +16,12 @@ title: "With Color Picker"
     description: 'Select your favorite colors',
     fields: [{
       name: 'favoriteColor',
-      inputType: 'colorPicker',
+      inputType: 'color-picker',
       label: 'Favorite Color',
       description: 'Pick your favorite color',
     }, {
       name: 'backgroundColor',
-      inputType: 'colorPicker',
+      inputType: 'color-picker',
       label: 'Background Color',
       description: 'Choose a background color',
     }],
