--- a/packages/rettangoli-ui/vt/specs/components/form/with-waveform.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/with-waveform.html
@@ -45,7 +45,7 @@ title: "With Waveform"
       placeholder: 'Click to load audio'
     }, {
       name: 'audioName',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Audio File Name',
       placeholder: 'Enter audio file name'
     }, {
