--- a/packages/rettangoli-ui/vt/specs/components/navbar/0003.html
+++ b/packages/rettangoli-ui/vt/specs/components/navbar/0003.html
@@ -18,7 +18,7 @@ title: "Navbar - With logo and path"
       alt: "Navbar",
     },
   }
-  navbar.addEventListener('clickStart', (e) => {
+  navbar.addEventListener('start-click', (e) => {
     console.log(e.detail);
   });
   navbar.render();
