--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-6.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-6.html
@@ -32,10 +32,10 @@ title: "With path on label and image"
       path: "/contact"
     },
   ]
-  sidebar.addEventListener('headerClick', (e) => {
+  sidebar.addEventListener('header-click', (e) => {
     console.log('header click', e.detail);
   });
-  sidebar.addEventListener('itemClick', (e) => {
+  sidebar.addEventListener('item-click', (e) => {
     console.log('item click', e.detail);
   });
   sidebar.render();
