--- a/packages/rettangoli-ui/vt/specs/components/form/field-array.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/field-array.html
@@ -19,22 +19,22 @@ title: "Field Array"
     description: 'Using lodash-style array notation for fields',
     fields: [{
       name: 'items[0]',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Item 1',
       placeholder: 'Enter item name'
     }, {
       name: 'items[1]',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Item 2',
       placeholder: 'Enter item name'
     }, {
       name: 'items[2]',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Item 3',
       placeholder: 'Enter item name'
     }, {
       name: 'items[3]',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Item 4',
       placeholder: 'Enter item name'
     }],
