--- a/packages/rettangoli-ui/vt/specs/components/form/slot.html
+++ b/packages/rettangoli-ui/vt/specs/components/form/slot.html
@@ -16,7 +16,7 @@ title: "Slot"
     description: 'Form Description',
     fields: [{
       name: 'email',
-      inputType: 'inputText',
+      inputType: 'input-text',
       label: 'Email',
       description: 'Enter your email',
       required: true,
