--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-5.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-5.html
@@ -34,10 +34,10 @@ title: "With path whole header"
       path: "/contact"
     },
   ]
-  sidebar.addEventListener('headerClick', (e) => {
+  sidebar.addEventListener('header-click', (e) => {
     console.log('header click', e.detail);
   });
-  sidebar.addEventListener('itemClick', (e) => {
+  sidebar.addEventListener('item-click', (e) => {
     console.log('item click', e.detail);
   });
   sidebar.render();
