--- a/packages/rettangoli-ui/vt/specs/components/sidebar/basic-7.html
+++ b/packages/rettangoli-ui/vt/specs/components/sidebar/basic-7.html
@@ -32,10 +32,10 @@ title: "With Attrs"
   view.insertAdjacentHTML('beforeend', `<rtgl-sidebar id="sidebar" header="${header}" items="${items}"></rtgl-sidebar>`);
 
   const sidebar = document.getElementById('sidebar');
-  sidebar.addEventListener('headerClick', (e) => {
+  sidebar.addEventListener('header-click', (e) => {
     console.log('header click', e.detail);
   });
-  sidebar.addEventListener('itemClick', (e) => {
+  sidebar.addEventListener('item-click', (e) => {
     console.log('item click', e.detail);
   });
 </script>
