--- a/packages/rettangoli-ui/vt/specs/components/select/overflow.html
+++ b/packages/rettangoli-ui/vt/specs/components/select/overflow.html
@@ -8,7 +8,7 @@ title: Overflow
 <script>
   const select = document.getElementById('select')
 
-  select.addEventListener('option-selected', (e) => {
+  select.addEventListener('value-change', (e) => {
     console.log(e.detail);
   });
 
