--- a/packages/rettangoli-ui/vt/specs/components/select/select-with-add-option.html
+++ b/packages/rettangoli-ui/vt/specs/components/select/select-with-add-option.html
@@ -30,19 +30,15 @@ title: Select with Add Option
   selectCustomLabel.render();
 
   // Listen for events
-  selectWithAdd.addEventListener('option-selected', (e) => {
-    console.log('option-selected', e.detail);
+  selectWithAdd.addEventListener('value-change', (e) => {
+    console.log('value-change', e.detail);
   });
 
-  selectWithAdd.addEventListener('add-option-selected', (e) => {
-    console.log('add-option-selected triggered');
+  selectWithAdd.addEventListener('add-option-click', (e) => {
+    console.log('add-option-click triggered');
   });
 
-  selectWithAdd.addEventListener('select-change', (e) => {
-    console.log('select-change', e.detail);
-  });
-
-  selectCustomLabel.addEventListener('add-option-selected', (e) => {
-    console.log('custom select add-option-selected triggered');
+  selectCustomLabel.addEventListener('add-option-click', (e) => {
+    console.log('custom select add-option-click triggered');
   });
 </script>
