--- a/packages/rettangoli-ui/vt/specs/components/select/undefined-value.html
+++ b/packages/rettangoli-ui/vt/specs/components/select/undefined-value.html
@@ -9,7 +9,7 @@ title: Undefined value
   const select = document.createElement('rtgl-select');
   const container = document.getElementById('container');
 
-  select.addEventListener('option-selected', (e) => {
+  select.addEventListener('value-change', (e) => {
     console.log(e.detail);
   });
 
