--- a/packages/rettangoli-ui/vt/specs/components/slider-input/custom-range-and-step.html
+++ b/packages/rettangoli-ui/vt/specs/components/slider-input/custom-range-and-step.html
@@ -8,7 +8,7 @@ title: "Custom Range and Step"
 <script>
   const sliderInput = document.getElementById('slider-input');
 
-  sliderInput.addEventListener('slider-input-value-change', (e) => {
-    console.log('slider-input-value-change', e.detail);
+  sliderInput.addEventListener('value-change', (e) => {
+    console.log('value-change', e.detail);
   });
 </script>
