--- a/packages/rettangoli-ui/vt/specs/components/breadcrumb/single-item.html
+++ b/packages/rettangoli-ui/vt/specs/components/breadcrumb/single-item.html
@@ -9,7 +9,7 @@ title: "Breadcrumb - Single Item"
 <script>
   const breadcrumb = document.getElementById('breadcrumb');
   breadcrumb.items = [
-    { label: "Home" }
+    { label: "Home", current: true }
   ];
   breadcrumb.render();
 </script>
