--- a/packages/rettangoli-ui/vt/specs/components/tooltip/placements-interactive.html
+++ b/packages/rettangoli-ui/vt/specs/components/tooltip/placements-interactive.html
@@ -6,13 +6,16 @@ specs:
   - Top, side, and bottom placement families render in one grid.
   - Placement text content updates with active placement.
 steps:
+  - wait 150
   - select tooltip-top-start:
     - hover
-  - wait 200
+  - 'waitFor #tooltip[open] attached 1200'
+  - 'assert exists #tooltip[open]'
   - screenshot
   - select tooltip-right-end:
     - hover
-  - wait 200
+  - 'waitFor #tooltip[open] attached 1200'
+  - 'assert exists #tooltip[open]'
   - screenshot
 ---
 <rtgl-view g="lg" h="100vh" w="100vw" ah="c" av="c">
