--- a/packages/rettangoli-fe/e2e/dashboard/vt/specs/components/pixel-grid/interactions.html
+++ b/packages/rettangoli-fe/e2e/dashboard/vt/specs/components/pixel-grid/interactions.html
@@ -1,45 +1,81 @@
 ---
 title: pixel-grid-interactions
 steps:
-  - select swatch-1:
-    - click
-  - select cell-0:
-    - click
-  - select cell-1:
-    - click
-  - select cell-2:
-    - click
-  - select cell-8:
-    - click
-  - select cell-9:
-    - click
-  - select cell-10:
-    - click
-  - select cell-16:
-    - click
-  - select cell-17:
-    - click
-  - select cell-18:
-    - click
-  - screenshot
-  - select swatch-2:
-    - click
-  - select cell-5:
-    - click
-  - select cell-6:
-    - click
-  - select cell-7:
-    - click
-  - select cell-13:
-    - click
-  - select cell-14:
-    - click
-  - select cell-15:
-    - click
-  - screenshot
-  - select clear:
-    - click
-  - screenshot
+  - action: select
+    testId: swatch-1
+    steps:
+      - action: click
+  - action: select
+    testId: cell-0
+    steps:
+      - action: click
+  - action: select
+    testId: cell-1
+    steps:
+      - action: click
+  - action: select
+    testId: cell-2
+    steps:
+      - action: click
+  - action: select
+    testId: cell-8
+    steps:
+      - action: click
+  - action: select
+    testId: cell-9
+    steps:
+      - action: click
+  - action: select
+    testId: cell-10
+    steps:
+      - action: click
+  - action: select
+    testId: cell-16
+    steps:
+      - action: click
+  - action: select
+    testId: cell-17
+    steps:
+      - action: click
+  - action: select
+    testId: cell-18
+    steps:
+      - action: click
+  - action: screenshot
+  - action: select
+    testId: swatch-2
+    steps:
+      - action: click
+  - action: select
+    testId: cell-5
+    steps:
+      - action: click
+  - action: select
+    testId: cell-6
+    steps:
+      - action: click
+  - action: select
+    testId: cell-7
+    steps:
+      - action: click
+  - action: select
+    testId: cell-13
+    steps:
+      - action: click
+  - action: select
+    testId: cell-14
+    steps:
+      - action: click
+  - action: select
+    testId: cell-15
+    steps:
+      - action: click
+  - action: screenshot
+  - action: select
+    testId: clear
+    steps:
+      - action: click
+  - action: screenshot
 ---
 
 <script type="module" src="/static/public/main.js"></script>
