--- a/packages/rettangoli-fe/e2e/dashboard/vt/specs/components/dashboard/page.html
+++ b/packages/rettangoli-fe/e2e/dashboard/vt/specs/components/dashboard/page.html
@@ -1,32 +1,56 @@
 ---
 title: dashboard-composed
 steps:
-  - select swatch-1:
-    - click
-  - select cell-0:
-    - click
-  - select cell-9:
-    - click
-  - select cell-18:
-    - click
-  - select cell-27:
-    - click
-  - select next:
-    - click
-  - select next:
-    - click
-  - screenshot
-  - select kanban-input:
-    - write Hotfix
-  - select kanban-add:
-    - click
-  - select move-3:
-    - click
-  - screenshot
-  - keypress r
-  - keypress r
-  - keypress r
-  - screenshot
+  - action: select
+    testId: swatch-1
+    steps:
+      - action: click
+  - action: select
+    testId: cell-0
+    steps:
+      - action: click
+  - action: select
+    testId: cell-9
+    steps:
+      - action: click
+  - action: select
+    testId: cell-18
+    steps:
+      - action: click
+  - action: select
+    testId: cell-27
+    steps:
+      - action: click
+  - action: select
+    testId: next
+    steps:
+      - action: click
+  - action: select
+    testId: next
+    steps:
+      - action: click
+  - action: screenshot
+  - action: select
+    testId: kanban-input
+    steps:
+      - action: write
+        value: Hotfix
+  - action: select
+    testId: kanban-add
+    steps:
+      - action: click
+  - action: select
+    testId: move-3
+    steps:
+      - action: click
+  - action: screenshot
+  - action: keypress
+    key: r
+  - action: keypress
+    key: r
+  - action: keypress
+    key: r
+  - action: screenshot
 ---
 
 <script type="module" src="/static/public/main.js"></script>
