--- a/packages/rettangoli-ui/vt/specs/components/tooltip/basic.html
+++ b/packages/rettangoli-ui/vt/specs/components/tooltip/basic.html
@@ -6,19 +6,38 @@ specs:
   - Long tooltip content remains readable and anchored.
   - Multiple tooltip instances operate independently.
 steps:
-  - select tooltip-btn-1:
-    - click
-  - 'waitFor #tooltip[open] attached 1200'
-  - 'assert exists #tooltip[open]'
-  - screenshot
-  - select tooltip-btn-1:
-    - click
-  - 'waitFor #tooltip[open] hidden 1200'
-  - select tooltip-btn-2:
-    - click
-  - 'waitFor #tooltip-2[open] attached 1200'
-  - 'assert exists #tooltip-2[open]'
-  - screenshot
+  - action: select
+    testId: tooltip-btn-1
+    steps:
+      - action: click
+  - action: waitFor
+    selector: '#tooltip[open]'
+    state: attached
+    timeoutMs: 1200
+  - action: assert
+    type: exists
+    selector: '#tooltip[open]'
+  - action: screenshot
+  - action: select
+    testId: tooltip-btn-1
+    steps:
+      - action: click
+  - action: waitFor
+    selector: '#tooltip[open]'
+    state: hidden
+    timeoutMs: 1200
+  - action: select
+    testId: tooltip-btn-2
+    steps:
+      - action: click
+  - action: waitFor
+    selector: '#tooltip-2[open]'
+    state: attached
+    timeoutMs: 1200
+  - action: assert
+    type: exists
+    selector: '#tooltip-2[open]'
+  - action: screenshot
 ---
 <rtgl-view h="100vh" w="100vw" ah="c" av="c" g="xl">
   <rtgl-button id="button" data-testid="tooltip-btn-1">Show Tooltip</rtgl-button>
