--- a/packages/rettangoli-ui/vt/specs/components/tooltip/placements-interactive.html
+++ b/packages/rettangoli-ui/vt/specs/components/tooltip/placements-interactive.html
@@ -6,17 +6,32 @@ specs:
   - Top, side, and bottom placement families render in one grid.
   - Placement text content updates with active placement.
 steps:
-  - wait 150
-  - select tooltip-top-start:
-    - hover
-  - 'waitFor #tooltip[open] attached 1200'
-  - 'assert exists #tooltip[open]'
-  - screenshot
-  - select tooltip-right-end:
-    - hover
-  - 'waitFor #tooltip[open] attached 1200'
-  - 'assert exists #tooltip[open]'
-  - screenshot
+  - action: wait
+    ms: 150
+  - action: select
+    testId: tooltip-top-start
+    steps:
+      - action: hover
+  - action: waitFor
+    selector: '#tooltip[open]'
+    state: attached
+    timeoutMs: 1200
+  - action: assert
+    type: exists
+    selector: '#tooltip[open]'
+  - action: screenshot
+  - action: select
+    testId: tooltip-right-end
+    steps:
+      - action: hover
+  - action: waitFor
+    selector: '#tooltip[open]'
+    state: attached
+    timeoutMs: 1200
+  - action: assert
+    type: exists
+    selector: '#tooltip[open]'
+  - action: screenshot
 ---
 <rtgl-view g="lg" h="100vh" w="100vw" ah="c" av="c">
   <rtgl-view dir="col" g="xl">
