--- a/packages/rettangoli-ui/vt/templates/default.html
+++ b/packages/rettangoli-ui/vt/templates/default.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/theme.css">
+    <link rel="stylesheet" href="/public/reset.css">
+    <link rel="stylesheet" href="/public/theme-default.css">
     <script src="/public/rtgl-icons.js"></script>
     <script src="/public/main.js"></script>
   </head>
